test/should_pass/basic_010.grg
actions basic_010;

rule r {
	pattern {
	}
	modify {
		x : Node;
	}
}

