test/should_fail/ret_003.grg
actions ret_003;

rule r : (Node, Node) {
	pattern {
		x: Node;
		y: Node;
	}
	modify {
		return(x, a);
	}
}

